# TiRa-Labra

./: .coveragerc  .env.test  .gitignore  README.md  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: main.yml
dokumentaatio/: Testausdokumentti.md  käyttöohje.md  määrittelydokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
konfiguraatio/: testaus_konfiguraatio.json  tuotanto_konfiguraatio.json
materiaalit/: testaus_konfiguraatio.json  tuotanto_konfiguraatio.json
src/: apuvälineet.py  build.py  config.py  index.py  konfiguraatio.py  tapahtumat.py
src/kayttoliiittyma/: lauta.py
src/käyttöliittymä/: lauta.py  lauta_ui.py  valikko_ui.py
src/peli/: ihmis_pelaaja.py  main.py  peli_logiikka.py  peli_silmukka.py  tapahtumat.py  tekoäly_pelaaja.py
src/peli:_logiikka/: main.py
src/tekoäly/: heurestinen_arviointi.py  heuristinen_arviointi.py  minimax.py
src/testit/: __init__.py  heurestinen_arviointi_test.py  heuristinen_arviointi_test.py  ihmis_pelaaja_test.py  minimax_test.py  nappi_test.py  nappien_hallinta_test.py  nappien_tapahtumat_test.py  peli_logiikka_test.py  tapahtumat_test.py  tekoäly_pelaaja_test.py
src/tests/: ihmis_pelaaja_test.py
src/valikko/: nappi.py  nappien_hallinta.py  nappien_tapahtumat.py  valikko.py
